--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "M.S. ECE Student at UT Austin"
   location         : "Austin, TX"
-  #employer         : "Red Brick University"
+  #employer         : "The University of Texas at Austin"
   uri              : # URL
   email            : "amr8797@my.utexas.edu" 
 
