--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "./images/pfp1.jpg"
+  avatar           : "/images/pfp1.jpg"
   name             : "Anjali Raghavan"
   pronouns         : # example: "she/her"  
   bio              : "M.S. ECE Student at UT Austin"
