--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Anjali Raghavan"
 title_separator          : "-"
 name                     : &name "Anjali Raghavan"
 description              : &description "Anjali Raghavans's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://anjalir101.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "anjalir101/anjalir101.github.io"
@@ -30,17 +30,17 @@ author:
   location         : "Austin, TX"
   #employer         : "The University of Texas at Austin"
   uri              : # URL
-  email            : "amr8797@my.utexas.edu" 
+  email            : "anjali.m.raghavan [AT] utexas [dot] edu" 
 
   # Academic websites
   #academia         : # URL
   #arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   #inspire-hep      : # URL
   #impactstory      : # URL
-  #orcid            : "https://orcid.org/yourorcidurl"
+  #orcid            : #"https://orcid.org/yourorcidurl"
   semantic         : # URL
-  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #pubmed           :# "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   #researchgate     : # URL
   #scopus           : # URL
 
@@ -54,7 +54,7 @@ author:
 
   # Social media
   artstation       : # Username
- # bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Username" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : anjalimraghavan
+  linkedin         : # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -292,14 +292,14 @@ defaults:
 # Sass/SCSS
 sass:
   sass_dir: _sass
-  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 
 # Outputting
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: Etc/UTC # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Etc/UTC # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
@@ -319,6 +319,7 @@ whitelist:
   - jekyll-sitemap
   - jekyll-redirect-from
   - jemoji
+
 
 
 # Archives
